# threading-at-home

./: .gitignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  threading-at-home-prd.md  tsconfig.base.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: main.ts  runnerUi.test.ts  runnerUi.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/runner/: package.json  tsconfig.json
apps/runner/src/: broker.ts  capabilities.ts  cli.ts  config.ts  convexApi.ts  index.ts  patchCapture.ts  runLoop.ts  sanitize.ts  smolvm.ts  token.ts  workspace.ts
apps/runner/test/: cli.test.ts  config.test.ts  patchCapture.test.ts  runLoop.test.ts  smolvm.test.ts  token.test.ts  workspace.test.ts
apps/web/: middleware.ts  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/app/: ConvexClientProvider.tsx  convexApi.ts  globals.css  layout.tsx  (+1 more)
convex/: README.md  auth.ts  crons.ts  github.ts  http.ts  lifecycle.ts  lifecycleLogic.test.ts  lifecycleLogic.ts  maintainerResultViews.test.ts  maintainerResultViews.ts  package.json  placeholder.ts  schema.ts  tsconfig.json  users.ts  volunteer.ts  volunteerLogic.test.ts  volunteerLogic.ts
docs/: codex-oss-capacity-research.md  desktop-wrapper.md  first-read-only-task-loop-demo.md  github-app-configuration.md  implementation-roadmap.md  oss-capacity-app-plan.md  smolvm-isolation.md  threaded-delivery-workflow.md
examples/: codex-rate-limit-probe.mjs
(+14 files in other folders)
